Add nonce generation and use

--- a/service-front/docker/web/etc/confd/templates/nginx.conf
+++ b/service-front/docker/web/etc/confd/templates/nginx.conf
@@ -35,21 +35,38 @@ log_format CSP escape=json
 # local dev as when up on amazon these id's exist
 map $http_x_amzn_trace_id $trace_id {
     "~*Root=" $http_x_amzn_trace_id;
-    default "Root=1-$msec-$connection$connection_requests";
+    default   "Root=1-$msec-$connection$connection_requests";
+}
+
+# grap the nonce value returned from the app and make it available to add
+# to our own headers
+map $upstream_http_x_csp_nonce $CSP_nonce {
+    "~*nonce-" $upstream_http_x_csp_nonce;
+    default   "nonce-ApplicationFailedToGenerateNonce";
 }
 
 server {
-    listen       80 default_server;
-    server_name  _;
+    listen        80 default_server;
+    server_name   _;
     server_tokens off;
 
-    error_log /var/log/nginx/error.log {{ getv "/nginx/log/level" "warn" }};
+    error_log  /var/log/nginx/error.log {{ getv "/nginx/log/level" "warn" }};
     access_log /var/log/nginx/access.log json_combined;
 
-    gzip on;
+    gzip            on;
     gzip_min_length 100;
-    gzip_vary on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml text/javascript image/svg+xml;
+    gzip_vary       on;
+    gzip_types      text/plain text/css application/json application/javascript text/xml application/xml text/javascript image/svg+xml;
+
+    set $CSP_image   "img-src     'self' data:";
+    set $CSP_script  "script-src  'self' https://www.googletagmanager.com https://www.google-analytics.com";
+    set $CSP_style   "style-src   'self'";
+    set $CSP_font    "font-src    'self'";
+    set $CSP_form    "form-action 'self'";
+    set $CSP_connect "connect-src https://www.google-analytics.com";
+    set $CSP_report  "report-uri {{ getv "/web/domain" "http://localhost" }}/_csp";
+
+    add_header Content-Security-Policy-Report-Only "default-src 'none'; ${CSP_image}; ${CSP_font}; ${CSP_connect}; ${CSP_script} '${CSP_nonce}'; ${CSP_style} '${CSP_nonce}'; ${CSP_form}; ${CSP_report};";
 
     # add security headers
     #
@@ -62,24 +79,15 @@ server {
     # serve noindex, nofollow meta tag on each page so that search engines do not index this domain
     add_header X-Robots-Tag "noindex, nofollow" always;
 
-    set $CSP_image   "img-src     'self' data:;";
-    set $CSP_script  "script-src  'self' 'unsafe-inline' https://www.googletagmanager.com https://www.google-analytics.com;";
-    set $CSP_style   "style-src   'self' 'unsafe-inline';";
-    set $CSP_font    "font-src    'self';";
-    set $CSP_connect "connect-src https://www.google-analytics.com;";
-    set $CSP         "default-src 'none'; ${CSP_image} ${CSP_script} ${CSP_style} ${CSP_connect} ${CSP_font}";
-
-    add_header Content-Security-Policy-Report-Only "${CSP} report-uri {{ getv "/web/domain" "http://localhost" }}/_csp";
-
     location / {
         root    /web;
 
         # cache static assets for 90 days
-        #
         location ~* \.(css|jpg|js|png|ico|jpeg|woff2|woff)$ {
-            expires 90d;
+            expires    90d;
             access_log off;
         }
+
         try_files $uri /index.php$is_args$args;
     }
 
@@ -89,35 +97,26 @@ server {
     }
 
     # redirect server error pages to the static page /50x.html
-    #
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
 
-    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-    #
+    # pass the PHP scripts to FastCGI upstream server
     location ~ \.php$ {
-        fastcgi_pass   {{getv "/app/host" }}:{{getv "/app/port" }};
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
+
         include fastcgi_params;
-
-        fastcgi_param SCRIPT_FILENAME /app/public$fastcgi_script_name;
-
-        # add tracing to the request
         fastcgi_param HTTP_X_AMZN_TRACE_ID $trace_id;
+        fastcgi_param SCRIPT_FILENAME      /app/public$fastcgi_script_name;
 
-        # Prevents URIs that include the front controller. This will 404:
-        # http://domain.tld/app.php/some-path
-        # Remove the internal directive to allow URIs like this
-        #internal;
+        fastcgi_pass @php;
     }
 
     # deny access to .htaccess files, if Apache's document root
     # concurs with nginx's one
-    #
     location ~ /\.ht {
-        deny  all;
+        deny all;
     }
 
     # Comply with https://ministryofjustice.github.io/security-guidance/contact/implement-security-txt/#implementing-securitytxt
@@ -125,13 +124,17 @@ server {
 }
 
 # this block is needed, along with the /_csp location defined above, to allow the
-# content of the requet body to be logged AND the response to be a 204. #JustNginxThings
+# content of the request body to be logged AND the response to be a 204. #JustNginxThings
 server {
-    listen       8080 default_server;
-    server_name  _;
+    listen      8080 default_server;
+    server_name _;
 
     location /_csp_response {
         access_log off;
         return 204;
     }
+}
+
+upstream @php {
+    server {{getv "/app/host" }}:{{getv "/app/port" }};
 }
