Sort out CORs headers

--- a/service-front/docker/web/etc/confd/templates/nginx.conf
+++ b/service-front/docker/web/etc/confd/templates/nginx.conf
@@ -68,8 +68,13 @@ server {
 
     add_header Content-Security-Policy-Report-Only "default-src 'none'; ${CSP_image}; ${CSP_font}; ${CSP_connect}; ${CSP_script} '${CSP_nonce}'; ${CSP_style} '${CSP_nonce}'; ${CSP_form}; ${CSP_report};";
 
+    # add CORS headers
+    add_header Access-Control-Allow-Origin {{ getv "/web/domain" "http://localhost" }} always;
+    add_header Access-Control-Allow-Credentials 'true' always;
+    add_header Access-Control-Allow-Methods "GET,POST,OPTIONS";
+    add_header Access-Control-Allow-Headers "Authorization,Accept,Origin,DNT,User-Agent,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range";
+
     # add security headers
-    #
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Frame-Options "deny";
     add_header X-Content-Type-Options "nosniff";
@@ -81,6 +86,14 @@ server {
 
     location / {
         root    /web;
+
+        # CORS preflight request
+        if ($request_method = "OPTIONS") {
+            add_header "Access-Control-Max-Age" 1728000;
+            add_header "Content-Type" "text/plain charset=UTF-8";
+            add_header "Content-Length" 0;
+            return 204;
+        }
 
         # cache static assets for 90 days
         location ~* \.(css|jpg|js|png|ico|jpeg|woff2|woff)$ {
@@ -109,6 +122,8 @@ server {
         include fastcgi_params;
         fastcgi_param HTTP_X_AMZN_TRACE_ID $trace_id;
         fastcgi_param SCRIPT_FILENAME      /app/public$fastcgi_script_name;
+
+        fastcgi_hide_header X-Csp-Nonce;
 
         fastcgi_pass @php;
     }
