fix missing trivy sarif file when step fails due to unit tests

--- a/.github/workflows/_build-and-push.yml
+++ b/.github/workflows/_build-and-push.yml
@@ -241,7 +241,8 @@ jobs:
         id: trivy_upload_sarif
         uses: github/codeql-action/upload-sarif@v2
         if: |
-          always() && (inputs.specific_path == 'all' || inputs.specific_path == matrix.svc_prefix)
+          (steps.trivy_scan.outcome == 'success' || steps.trivy_scan.outcome == 'failure') &&
+          (inputs.specific_path == 'all' || inputs.specific_path == matrix.svc_prefix)
         with:
           sarif_file: 'trivy-results.sarif'
 
