--- a/service-front/docker/web/etc/confd/templates/nginx.conf
+++ b/service-front/docker/web/etc/confd/templates/nginx.conf
@@ -64,7 +64,7 @@ server {
     set $CSP_style   "style-src   'self'";
     set $CSP_font    "font-src    'self'";
     set $CSP_form    "form-action 'self'";
-    set $CSP_connect "connect-src https://www.google-analytics.com";
+    set $CSP_connect "connect-src 'self' https://www.google-analytics.com";
     set $CSP_report  "report-uri {{ getv "/web/domain" "http://localhost" }}/_csp";
 
     add_header Content-Security-Policy-Report-Only "default-src 'none'; ${CSP_image}; ${CSP_font}; ${CSP_connect}; ${CSP_script} '${CSP_nonce}'; ${CSP_style} '${CSP_nonce}'; ${CSP_form}; ${CSP_report};";
