Uml 2425 implement csp policy and reporting (#2169)
* Implement CSP on nginx responses and provide logging endpoint

* Configure logging endpoint locally

* Stop google analytics from working for Cloudwatch test purposes

* Update hashicorp/local terraform package

* Add web_domain configuration value to ecs tasks

* Fix fetch depth as documented https://github.com/tj-actions/changed-files#usage

* Add protocol to reporting url

* Update fetch-depth as changes not being picked up.

* Forgot comma in log format

* Revert "Stop google analytics from working for Cloudwatch test purposes"

This reverts commit 356f4bb4bd83fbbb1e79e130c5a36ea40bb147d4.

* Add nonce generation and use

* Sort out CORs headers

* Twig component test fixes

* Add security header smoke test

* Add unit testing for nonce generation

* Tweak the pipeline order.

Probably not really necessary.

* Add port to WEB_DOMAIN locally.

* Ensure self is allowed for connect-src

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,7 @@ services:
     ports:
       - 9001:80
     environment:
+      WEB_DOMAIN: http://localhost:9001
       APP_HOST: viewer-app
       APP_PORT: 9000
       NGINX_LOG_LEVEL: warn
@@ -95,6 +96,7 @@ services:
     ports:
       - 9002:80
     environment:
+      WEB_DOMAIN: http://localhost:9002
       APP_HOST: actor-app
       APP_PORT: 9000
       NGINX_LOG_LEVEL: warn
