--- a/.github/workflows/pull-request-path.yml
+++ b/.github/workflows/pull-request-path.yml
@@ -39,6 +39,8 @@ jobs:
       specific_path: ${{ steps.variables.outputs.path }}
     steps:
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # pin@v3
+        with:
+          fetch-depth: 2
       - name: get changed files in the admin folder
         id: changed-files-admin
         uses: tj-actions/changed-files@270645280afddc7e2cf3f4867089522c8f2f8f9a
