--- a/service-front/docker/web/etc/confd/templates/nginx.conf
+++ b/service-front/docker/web/etc/confd/templates/nginx.conf
@@ -1,9 +1,6 @@
-log_format tracing   '$trace_id - [$time_local] "$request" '
-                     '$status $body_bytes_sent "$http_referer" '
-                     '"$http_user_agent" "$http_x_forwarded_for"';
-
 log_format json_combined escape=json
     '{'
+        '"type":"request",'
         '"time_local":"$time_iso8601",'
         '"client_ip":"$http_x_forwarded_for",'
         '"remote_addr":"$remote_addr",'
@@ -18,81 +15,142 @@ log_format json_combined escape=json
         '"request_id":"$trace_id"'
     '}';
 
+log_format CSP escape=json
+    '{'
+        '"type":"csp_report",'
+        '"time_local":"$time_iso8601",'
+        '"client_ip":"$http_x_forwarded_for",'
+        '"remote_addr":"$remote_addr",'
+        '"remote_user":"$remote_user",'
+        '"request":"$request",'
+        '"status":"$status",'
+        '"body_bytes_sent":"$body_bytes_sent",'
+        '"request_time":"$request_time",'
+        '"http_referrer":"$http_referer",'
+        '"http_user_agent":"$http_user_agent",'
+        '"request_body": "$request_body",'
+        '"request_id":"$trace_id"'
+    '}';
+
 # ensures that the trace id always has a value, used mostly for
 # local dev as when up on amazon these id's exist
 map $http_x_amzn_trace_id $trace_id {
     "~*Root=" $http_x_amzn_trace_id;
-    default "Root=1-$msec-$connection$connection_requests";
+    default   "Root=1-$msec-$connection$connection_requests";
+}
+
+# grap the nonce value returned from the app and make it available to add
+# to our own headers
+map $upstream_http_x_csp_nonce $CSP_nonce {
+    "~*nonce-" $upstream_http_x_csp_nonce;
+    default   "nonce-ApplicationFailedToGenerateNonce";
 }
 
 server {
-    listen       80 default_server;
-    server_name  _;
+    listen        80 default_server;
+    server_name   _;
     server_tokens off;
 
-    error_log /var/log/nginx/error.log {{ getv "/nginx/log/level" "warn" }};
+    error_log  /var/log/nginx/error.log {{ getv "/nginx/log/level" "warn" }};
     access_log /var/log/nginx/access.log json_combined;
 
-    gzip on;
+    gzip            on;
     gzip_min_length 100;
-    gzip_vary on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml text/javascript image/svg+xml;
+    gzip_vary       on;
+    gzip_types      text/plain text/css application/json application/javascript text/xml application/xml text/javascript image/svg+xml;
+
+    set $CSP_image   "img-src     'self' data:";
+    set $CSP_script  "script-src  'self' https://www.googletagmanager.com https://www.google-analytics.com";
+    set $CSP_style   "style-src   'self'";
+    set $CSP_font    "font-src    'self'";
+    set $CSP_form    "form-action 'self'";
+    set $CSP_connect "connect-src 'self' https://www.google-analytics.com";
+    set $CSP_report  "report-uri {{ getv "/web/domain" "http://localhost" }}/_csp";
+
+    add_header Content-Security-Policy-Report-Only "default-src 'none'; ${CSP_image}; ${CSP_font}; ${CSP_connect}; ${CSP_script} '${CSP_nonce}'; ${CSP_style} '${CSP_nonce}'; ${CSP_form}; ${CSP_report};";
+
+    # add CORS headers
+    add_header Access-Control-Allow-Origin {{ getv "/web/domain" "http://localhost" }} always;
+    add_header Access-Control-Allow-Credentials 'true' always;
+    add_header Access-Control-Allow-Methods "GET,POST,OPTIONS";
+    add_header Access-Control-Allow-Headers "Authorization,Accept,Origin,DNT,User-Agent,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range";
 
     # add security headers
-    #
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Frame-Options "deny";
     add_header X-Content-Type-Options "nosniff";
     add_header Strict-Transport-Security "max-age=3600; includeSubDomains";
     add_header Referrer-Policy "same-origin";
 
-    location / {
-        root    /web;
-
-        # cache static assets for 90 days
-        #
-        location ~* \.(css|jpg|js|png|ico|jpeg|woff2|woff)$ {
-            expires 90d;
-            access_log off;
-        }
-        try_files $uri /index.php$is_args$args;
-    }
-
     # serve noindex, nofollow meta tag on each page so that search engines do not index this domain
     add_header X-Robots-Tag "noindex, nofollow" always;
 
+    location / {
+        root    /web;
+
+        # CORS preflight request
+        if ($request_method = "OPTIONS") {
+            add_header "Access-Control-Max-Age" 1728000;
+            add_header "Content-Type" "text/plain charset=UTF-8";
+            add_header "Content-Length" 0;
+            return 204;
+        }
+
+        # cache static assets for 90 days
+        location ~* \.(css|jpg|js|png|ico|jpeg|woff2|woff)$ {
+            expires    90d;
+            access_log off;
+        }
+
+        try_files $uri /index.php$is_args$args;
+    }
+
+    location /_csp {
+        access_log /var/log/nginx/csp.log CSP;
+        proxy_pass http://127.0.0.1:8080/_csp_response;
+    }
+
     # redirect server error pages to the static page /50x.html
-    #
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
 
-    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-    #
+    # pass the PHP scripts to FastCGI upstream server
     location ~ \.php$ {
-        fastcgi_pass   {{getv "/app/host" }}:{{getv "/app/port" }};
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
+
         include fastcgi_params;
-
-        fastcgi_param SCRIPT_FILENAME /app/public$fastcgi_script_name;
-
-        # add tracing to the request
         fastcgi_param HTTP_X_AMZN_TRACE_ID $trace_id;
+        fastcgi_param SCRIPT_FILENAME      /app/public$fastcgi_script_name;
 
-        # Prevents URIs that include the front controller. This will 404:
-        # http://domain.tld/app.php/some-path
-        # Remove the internal directive to allow URIs like this
-        #internal;
+        fastcgi_hide_header X-Csp-Nonce;
+
+        fastcgi_pass @php;
     }
 
     # deny access to .htaccess files, if Apache's document root
     # concurs with nginx's one
-    #
     location ~ /\.ht {
-        deny  all;
+        deny all;
     }
 
     # Comply with https://ministryofjustice.github.io/security-guidance/contact/implement-security-txt/#implementing-securitytxt
     rewrite ^/.well-known/security.txt$ https://security-guidance.service.justice.gov.uk/.well-known/security.txt permanent;
+}
+
+# this block is needed, along with the /_csp location defined above, to allow the
+# content of the request body to be logged AND the response to be a 204. #JustNginxThings
+server {
+    listen      8080 default_server;
+    server_name _;
+
+    location /_csp_response {
+        access_log off;
+        return 204;
+    }
+}
+
+upstream @php {
+    server {{getv "/app/host" }}:{{getv "/app/port" }};
 }
