--- a/.github/workflows/_seed-database.yml
+++ b/.github/workflows/_seed-database.yml
@@ -24,9 +24,6 @@ jobs:
           name: environment_config_file
           path: terraform/environment
 
-      - name: check it has downloaded
-        run: ls -alt terraform/environment
-
       - name: install python
         uses: actions/setup-python@f60fe39c45f23b4a7683b4ae8e08239d4a2089bd # pin@v4.2.0
         with:
@@ -39,6 +36,11 @@ jobs:
       - name: seed dynamodb
         run: |
           export AWS_ACCOUNT_ID=$(cat ./terraform/environment/cluster_config.json | jq .account_id | xargs)
+          if [[ "${AWS_ACCOUNT_ID}" == "690083044361" ]]
+          then
+            echo "Production account detected. Exiting"
+            exit 1
+          fi
           export DYNAMODB_TABLE_ACTOR_CODES=$(cat ./terraform/environment/cluster_config.json | jq .actor_lpa_codes_table | xargs)
           export DYNAMODB_TABLE_VIEWER_CODES=$(cat ./terraform/environment/cluster_config.json | jq .viewer_codes_table | xargs)
           export DYNAMODB_TABLE_ACTOR_USERS=$(cat ./terraform/environment/cluster_config.json | jq .actor_users_table | xargs)
