code commented for a test and will be reveretd

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,13 +2,16 @@ version: 2.1
 
 workflows:
   post_statistics:
-    triggers:
-      - schedule:
-          cron: "0 9 * * 1" # 9am every Monday
-          filters:
-            branches:
-              only:
-                - main
+    when:
+      and:
+        - not: { equal: [ main, << pipeline.git.branch >> ] }
+#    triggers:
+#      - schedule:
+#          cron: "0 9 * * 1" # 9am every Monday
+#          filters:
+#            branches:
+#              only:
+#                - main
     jobs:
       - slack_notify_stats:
           name: slack_notify_stats
@@ -833,11 +836,9 @@ jobs:
           command: |
             pip install -r scripts/pipeline/requirements.txt
             python ~/project/scripts/get_statistics/get_statistics.py --text > ./output.txt
-
       - run:
           name: Print out Stats
           command: cat ./output.txt
-            
       - slack/notify:
           title: "Service Statistics - Use a Lasting Power of Attorney Production"
           color: "#9933ff"
