Print stats in CI to show all events (#2200)
* print stats in CI as events outputs are longer and getting truncated in slack summary

* code commented for a test and will be reveretd

* config changes reveretd after testing

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -833,6 +833,9 @@ jobs:
           command: |
             pip install -r scripts/pipeline/requirements.txt
             python ~/project/scripts/get_statistics/get_statistics.py --text > ./output.txt
+      - run:
+          name: Print out Stats
+          command: cat ./output.txt
       - slack/notify:
           title: "Service Statistics - Use a Lasting Power of Attorney Production"
           color: "#9933ff"
