UML-2819 exclude php from minor bundle prs and bundle action prs

--- a/renovate.json
+++ b/renovate.json
@@ -29,6 +29,27 @@
       "schedule": [
         "after 6am and before 9am on Monday"
       ],
+      "stabilityDays": 3,
+      "excludePackageNames": [
+        "php"
+      ]
+    },
+    {
+      "groupName": "GitHub Actions",
+      "matchPackagePatterns": [
+        "actions/*"
+      ],
+      "automerge": true,
+      "dependencyDashboardApproval": true,
+      "labels": [
+        "Dependencies",
+        "Renovate"
+      ],
+      "prTitle": "chore(deps): update GitHub Actions",
+      "prBody": "Updates the following GitHub Actions dependencies:\n\n{{#each dependencies}}- {{this.name}}\n{{/each}}",
+      "schedule": [
+        "after 6am and before 9am on Monday"
+      ],
       "stabilityDays": 3
     }
   ],
