--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ scripts/analysis_scripts/*.csv
 
 query/s3_objects/**
 terraform/**/modules/**.terraform.lock.hcl
+
+.structurizr
+docs/diagrams/dsl/**/workspace.json
