--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,3 +15,10 @@ repos:
     rev: master
     hooks:
       - id: git-secrets
+  - repo: local
+    hooks:
+    - id: structurizr
+      name: "structurizr"
+      entry: pre-commit-hooks/structurizr/pre-commit
+      language: script
+      args: ['/docs/diagrams/dsl']
