--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,6 +125,7 @@ services:
       ALLOW_OLDER_LPAS: "true"
       ALLOW_MERIS_LPAS: "false"
       DONT_SEND_LPAS_REGISTERED_AFTER_SEP_2019_TO_CLEANSING_TEAM: "false"
+      INSTRUCTIONS_AND_PREFERENCES: "false"
 
       # Local only
       API_SERVICE_URL: http://api-web
@@ -208,6 +209,7 @@ services:
       ALLOW_MERIS_LPAS: "false"
       SAVE_OLDER_LPA_REQUESTS: "true"
       DONT_SEND_LPAS_REGISTERED_AFTER_SEP_2019_TO_CLEANSING_TEAM: "false"
+      INSTRUCTIONS_AND_PREFERENCES: "false"
 
       # Local only
       AWS_ACCESS_KEY_ID: "-"
