--- a/.github/workflows/_node-test.yml
+++ b/.github/workflows/_node-test.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3 # pin@v3
       - uses: actions/setup-node@64ed1c7eab4cce3362f8c340dee64e5eaeef8f7c # pin@v3.6.0
         with:
-          node-version: 18
+          node-version-file: '.nvmrc'
       - name: cache node modules
         id: cache-npm
         uses: actions/cache@04f198bf0b2a39f7230a4304bf07747a0bddf146 # pin@v3.0.8
