openapi spec for image-request-handler wip

--- a/mock-integrations/nginx.conf
+++ b/mock-integrations/nginx.conf
@@ -29,4 +29,10 @@ server {
         proxy_set_header Prefer example=$swagger_example;
         proxy_pass http://data-lpa:4010;
     }
+
+    location /v1/use-an-lpa/image-request-handler/ {
+        rewrite ^/v1(.*)$ $1 last;
+        proxy_set_header Prefer example=$swagger_example;
+        proxy_pass http://mock-image-request-handler:4011;
+    }
 }
