--- a/renovate.json
+++ b/renovate.json
@@ -10,6 +10,9 @@
     "Dependencies",
     "Renovate"
   ],
+  "constraints": {
+    "php": "8.1"
+  }
   "packageRules": [
     {
       "groupName": "Patch & Minor Updates",
