--- a/service-front/app/composer.json
+++ b/service-front/app/composer.json
@@ -9,6 +9,9 @@
         "allow-plugins": {
             "laminas/laminas-component-installer": false,
             "dealerdirect/phpcodesniffer-composer-installer": true
+        },
+        "platform": {
+            "php": "8.1"
         }
     },
     "extra": {
