--- a/service-front/docker/app/Dockerfile
+++ b/service-front/docker/app/Dockerfile
@@ -1,7 +1,7 @@
 #
 # Base image containing correct PHP, extensions and configuration
 #
-FROM php:8.1-fpm-alpine3.16 AS php-base
+FROM php:8.1.18-fpm-alpine3.16 AS php-base
 
 COPY --from=mlocati/php-extension-installer /usr/bin/install-php-extensions /usr/bin/
 
@@ -26,6 +26,7 @@ COPY --from=composer /usr/bin/composer /usr/bin/
 COPY service-front/app/composer.json service-front/app/composer.lock /app/
 
 RUN composer install --prefer-dist --no-dev --no-interaction --no-scripts --optimize-autoloader
+RUN composer check-platform-reqs
 
 #
 # Create production image using base and app files
