--- a/mock-integrations/nginx.conf
+++ b/mock-integrations/nginx.conf
@@ -27,7 +27,7 @@ server {
     location / {
         rewrite ^/v1(.*)$ $1 last;
         proxy_set_header Prefer example=$swagger_example;
-        proxy_pass http://data-lpa:4010;
+        proxy_pass http://mock-data-lpa:4010;
     }
 
     location /v1/use-an-lpa/image-request-handler/ {
