--- a/docker-compose.dependencies.yml
+++ b/docker-compose.dependencies.yml
@@ -69,7 +69,8 @@ services:
 
   mock-image-request-handler:
     container_name: mock-image-request-handler
-    image: stoplight/prism:4
-    command: 'mock -h 0.0.0.0 /tmp/openapi.yaml'
+    image: outofcoffee/imposter:3.17.3
+    ports:
+      - "4011:8080"
     volumes:
-      - ./mock-integrations/image-request-handler/mock-openapi.yaml:/tmp/openapi.yaml:ro
+      - ./mock-integrations/image-request-handler:/opt/imposter/config:ro
