--- a/mock-integrations/nginx.conf
+++ b/mock-integrations/nginx.conf
@@ -28,4 +28,8 @@ server {
         proxy_set_header Prefer example=$swagger_example;
         proxy_pass http://mock-data-lpa:4010;
     }
+
+    location /v1/image-request/ {
+        proxy_pass http://mock-image-request-handler:8080;
+    }
 }
