--- a/docker-compose.dependencies.yml
+++ b/docker-compose.dependencies.yml
@@ -56,19 +56,33 @@ services:
     depends_on:
       - mock-data-lpa
       - mock-image-request-handler
-    command: 'nginx -g "daemon off;"'
+    command:
+      - "nginx"
+      - "-g"
+      - "\"daemon off;\""
     volumes:
       - ./mock-integrations/nginx.conf:/etc/nginx/conf.d/default.conf
 
   mock-data-lpa:
     container_name: mock-data-lpa
     image: stoplight/prism:4
-    command: 'mock -h 0.0.0.0 /tmp/openapi.yaml'
+    command:
+      - "mock"
+      - "-h"
+      - "0.0.0.0"
+      - "/tmp/openapi.yaml"
     volumes:
       - ./mock-integrations/opg-data-lpa/mock-openapi.yaml:/tmp/openapi.yaml:ro
 
   mock-image-request-handler:
     container_name: mock-image-request-handler
     image: outofcoffee/imposter:3.17.3
+    command:
+      - "-c"
+      - "/opt/imposter/config"
+      - "-l"
+      - "4012"
+    ports:
+      - "4012:4012"
     volumes:
       - ./mock-integrations/image-request-handler:/opt/imposter/config:ro
