--- a/mock-integrations/nginx.conf
+++ b/mock-integrations/nginx.conf
@@ -32,4 +32,8 @@ server {
     location /v1/image-request/ {
         proxy_pass http://mock-image-request-handler:4012;
     }
+
+    location / {
+        root /var/www/html;
+    }
 }
