--- a/mock-integrations/opg-data-lpa/generate_examples/nginx-template.conf
+++ b/mock-integrations/opg-data-lpa/generate_examples/nginx-template.conf
@@ -4,7 +4,6 @@
 map $request_uri $swagger_example {
     # 200 examples
 
-
     # 404 - results in a "waiting" status in Make
     # NB there doesn't seem to be a way to supply an example for a non-200
     # response so we just request an example which doesn't exist, which
@@ -16,9 +15,13 @@ server {
     server_name gateway;
     listen 5000 default_server;
 
-    location / {
+    location /v1/use-an-lpa/lpas/ {
         rewrite ^/v1(.*)$ $1 last;
         proxy_set_header Prefer example=$swagger_example;
-        proxy_pass http://data-lpa:4010;
+        proxy_pass http://mock-data-lpa:4010;
+    }
+
+    location /v1/image-request/ {
+        proxy_pass http://mock-image-request-handler:8080;
     }
 }
