--- a/mock-integrations/nginx.conf
+++ b/mock-integrations/nginx.conf
@@ -3,7 +3,6 @@
 # but use different response fields to derive the date
 map $request_uri $swagger_example {
     # 200 examples
-    # 200 examples
     "~700000151451" "lpa1451";
     "~700000000617" "lpa0617";
     "~700000000526" "lpa0526";
@@ -24,9 +23,17 @@ server {
     server_name gateway;
     listen 5000 default_server;
 
-    location / {
+    location /v1/use-an-lpa/lpas/ {
         rewrite ^/v1(.*)$ $1 last;
         proxy_set_header Prefer example=$swagger_example;
-        proxy_pass http://data-lpa:4010;
+        proxy_pass http://mock-data-lpa:4010;
+    }
+
+    location /v1/image-request/ {
+        proxy_pass http://mock-image-request-handler:4012;
+    }
+
+    location / {
+        root /var/www/html;
     }
 }
