--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -223,7 +223,7 @@ services:
       PHP_IDE_CONFIG: serverName=api-app
       XDEBUG_CONFIG: client_host=host.docker.internal client_port=9000
       XDEBUG_MODE: develop,debug,coverage
-      XDEBUG_TRIGGER: "true"
+      #XDEBUG_TRIGGER: "true"
       NOTIFY_API_KEY:
 
   api-composer:
