Fix prism mock rewrite not directing appropriately

--- a/mock-integrations/nginx.conf
+++ b/mock-integrations/nginx.conf
@@ -25,6 +25,9 @@ server {
 
     location /v1/use-an-lpa/lpas/ {
         rewrite ^/v1(.*)$ $1 last;
+    }
+
+    location /use-an-lpa/lpas/ {
         proxy_set_header Prefer example=$swagger_example;
         proxy_pass http://mock-data-lpa:4010;
     }
