--- a/service-api/app/behat.yml
+++ b/service-api/app/behat.yml
@@ -58,5 +58,6 @@ acceptance:
         - BehatTest\Context\Acceptance\ViewerContext
         - BehatTest\Context\Acceptance\CommonContext
         - BehatTest\Context\Acceptance\LpaContext
+        - BehatTest\Context\Acceptance\FeatureFlagContext
       filters:
         tags: "@viewer&&@acceptance"
