UML-2844 modify endpoint to also return instructions and preferences (#2251)
* first pass at endpoint (work in progress, transferring between machines)

* LpaService gets instructions and preferences if they are there

* tidier if statement

* Behat tests (WIP)

* Turn IAP feature flag on

* Add additional handler for actor/user lpa summary requests

* Test tweaks and fixes. Configure pact mock correctly

* Passing integration tests

* Final set of test tweaks to get things passing.

* Ensure CI starts the new mock

* Tidy up CI workflow

* Turn on feature flag for failing test.

* Don't use feature flag for new route

* Indentation all wrong.

* Add TODO for authorisation service.

* Fix idea file change

* Dont do end of file fixes on .idea files.

* Don't turn on feature on live yet, that would be silly.

* Turn off flag for UAT

* Turn off flag everywhere

---------

Co-authored-by: Adam Cooper <adam.cooper@digital.justice.gov.uk>

--- a/service-api/app/behat.yml
+++ b/service-api/app/behat.yml
@@ -19,6 +19,7 @@ default:
       providers:
         - lpa-codes-pact-mock: lpa-codes-pact-mock:80
         - api-gateway-pact-mock: api-gateway-pact-mock:80
+        - iap-images-mock: iap-images-mock:80
 
 integration:
   extensions:
@@ -57,5 +58,6 @@ acceptance:
         - BehatTest\Context\Acceptance\ViewerContext
         - BehatTest\Context\Acceptance\CommonContext
         - BehatTest\Context\Acceptance\LpaContext
+        - BehatTest\Context\Acceptance\FeatureFlagContext
       filters:
         tags: "@viewer&&@acceptance"
