--- a/.github/workflows/_build-and-push.yml
+++ b/.github/workflows/_build-and-push.yml
@@ -146,30 +146,40 @@ jobs:
           matrix.run_unit_tests == 'true' &&
           (inputs.specific_path == 'all' || inputs.specific_path == matrix.svc_prefix)
 
-      - name: docker integration tests
+      - name: docker integration and acceptance tests
         env:
           SVC_PREFIX: ${{ matrix.svc_prefix }}
         run: |
           if [[ "${SVC_PREFIX}" = "api" ]]; then
             docker run -d --rm --name lpa-codes-pact-mock pactfoundation/pact-cli:latest mock-service -p "80" --host "0.0.0.0" \
-            --pact-dir /tmp/pacts --consumer use_a_lasting_power_of_attorney --provider lpa-codes
+              --pact-dir /tmp/pacts --consumer use_a_lasting_power_of_attorney --provider lpa-codes
             docker run -d --rm --name api-gateway-pact-mock pactfoundation/pact-cli:latest mock-service -p "80" --host "0.0.0.0" \
-            --pact-dir /tmp/pacts --consumer use_a_lasting_power_of_attorney --provider api-gateway
+              --pact-dir /tmp/pacts --consumer use_a_lasting_power_of_attorney --provider api-gateway
+            docker run -d --rm --name iap-images-mock pactfoundation/pact-cli:latest mock-service -p "80" --host "0.0.0.0" \
+              --pact-dir /tmp/pacts --consumer use_a_lasting_power_of_attorney --provider iap-api-gateway
+
             export DOCKER_REMOTE_LPA_PACT_IP="$(docker inspect --format='{{.NetworkSettings.IPAddress}}' lpa-codes-pact-mock)"
             export DOCKER_REMOTE_API_PACT_IP="$(docker inspect --format='{{.NetworkSettings.IPAddress}}' api-gateway-pact-mock)"
-            docker run -d --name inttests --add-host lpa-codes-pact-mock:$DOCKER_REMOTE_LPA_PACT_IP --add-host api-gateway-pact-mock:$DOCKER_REMOTE_API_PACT_IP api-app:latest
-            docker exec inttests /usr/bin/composer install --prefer-dist --no-interaction --no-scripts --optimize-autoloader
-            docker exec inttests /app/vendor/bin/behat -p integration -f progress -o std -f junit -o /app/build/reports/int
-            docker exec inttests /usr/local/bin/php -dapc.enable_cli=1 \
-            /app/vendor/bin/behat -p acceptance -f progress -o std -f junit -o /app/build/reports/acc
+            export DOCKER_REMOTE_IAP_PACT_IP="$(docker inspect --format='{{.NetworkSettings.IPAddress}}' iap-images-mock)"
+
+            docker run -d --name behattests \
+              --add-host lpa-codes-pact-mock:$DOCKER_REMOTE_LPA_PACT_IP \
+              --add-host api-gateway-pact-mock:$DOCKER_REMOTE_API_PACT_IP \
+              --add-host iap-images-mock:$DOCKER_REMOTE_IAP_PACT_IP api-app:latest
+
+            docker exec behattests /usr/bin/composer install --prefer-dist --no-interaction --no-scripts --optimize-autoloader
+            docker exec behattests /app/vendor/bin/behat -p integration -f progress -o std -f junit -o /app/build/reports/int
+            docker exec behattests /usr/local/bin/php -dapc.enable_cli=1 /app/vendor/bin/behat -p acceptance -f progress -o std -f junit -o /app/build/reports/acc
+
             docker stop lpa-codes-pact-mock
             docker stop api-gateway-pact-mock
+            docker stop iap-images-mock
           elif [[ "${SVC_PREFIX}" = "front" ]]; then
-            docker run -d --name inttests front-app:latest
-            docker exec inttests /usr/bin/composer install --prefer-dist --no-interaction --no-scripts --optimize-autoloader
-            docker exec inttests /app/vendor/bin/behat -p integration -f progress -o std -f junit -o /app/build/reports/int
-            docker exec inttests /usr/local/bin/php -dapc.enable_cli=1 -d memory_limit=-1\
-            /app/vendor/bin/behat -p acceptance -f progress -o std -f junit -o /app/build/reports/acc
+            docker run -d --name behattests front-app:latest
+
+            docker exec behattests /usr/bin/composer install --prefer-dist --no-interaction --no-scripts --optimize-autoloader
+            docker exec behattests /app/vendor/bin/behat -p integration -f progress -o std -f junit -o /app/build/reports/int
+            docker exec behattests /usr/local/bin/php -dapc.enable_cli=1 -d memory_limit=-1 /app/vendor/bin/behat -p acceptance -f progress -o std -f junit -o /app/build/reports/acc
           fi
         if: |
           matrix.run_integration_tests == 'true' &&
@@ -181,7 +191,7 @@ jobs:
         run: |
           mkdir -p build/service-${SVC_PREFIX}
           docker cp tests:/app/build/reports build/service-${SVC_PREFIX}/phpunit
-          docker cp inttests:/app/build/reports build/service-${SVC_PREFIX}/behat
+          docker cp behattests:/app/build/reports build/service-${SVC_PREFIX}/behat
         if: |
           (success() || failure()) && contains(fromJson('["front", "api"]'), matrix.svc_prefix) &&
           matrix.svc_suffix == 'app' &&
