add CSP for google analytics 4

--- a/service-front/docker/web/etc/confd/templates/nginx.conf
+++ b/service-front/docker/web/etc/confd/templates/nginx.conf
@@ -59,12 +59,12 @@ server {
     gzip_vary       on;
     gzip_types      text/plain text/css application/json application/javascript text/xml application/xml text/javascript image/svg+xml;
 
-    set $CSP_image   "img-src     'self' data:";
+    set $CSP_image   "img-src     'self' https://*.google-analytics.com https://*.googletagmanager.com data:";
     set $CSP_script  "script-src  'self' https://www.googletagmanager.com https://www.google-analytics.com";
     set $CSP_style   "style-src   'self'";
     set $CSP_font    "font-src    'self'";
     set $CSP_form    "form-action 'self'";
-    set $CSP_connect "connect-src 'self' https://www.google-analytics.com";
+    set $CSP_connect "connect-src 'self' https://*.google-analytics.com https://*.analytics.google.com https://*.googletagmanager.com";
     set $CSP_report  "report-uri {{ getv "/web/domain" "http://localhost" }}/_csp";
 
     add_header Content-Security-Policy-Report-Only "default-src 'none'; ${CSP_image}; ${CSP_font}; ${CSP_connect}; ${CSP_script} '${CSP_nonce}'; ${CSP_style} '${CSP_nonce}'; ${CSP_form}; ${CSP_report};";
