--- a/service-admin/Dockerfile
+++ b/service-admin/Dockerfile
@@ -6,7 +6,7 @@ COPY web/assets web/assets
 COPY webpack.config.js .
 COPY package.json package-lock.json ./
 
-RUN npm ci && node_modules/.bin/webpack -p
+RUN npm ci && npm run build
 
 # Build Go app
 FROM golang:1.20.3-alpine as build-env
