Add build.js in place of webpack config

--- a/service-admin/Dockerfile
+++ b/service-admin/Dockerfile
@@ -3,7 +3,7 @@ FROM node:18-alpine as asset-env
 WORKDIR /app
 
 COPY web/assets web/assets
-COPY webpack.config.js .
+COPY build.js .
 COPY package.json package-lock.json ./
 
 RUN npm ci && npm run build
