Ensure sass uses local reference path for build

--- a/service-admin/package.json
+++ b/service-admin/package.json
@@ -5,12 +5,12 @@
   "type": "module",
   "scripts": {
     "build": "npm run build-scss && node build.js",
-    "build-scss": "npm rebuild sass --verbose && sass --verbose web/assets/main.scss:web/static/stylesheets/main.css --style compressed"
+    "build-scss": "npm rebuild sass --verbose && sass --verbose --load-path . web/assets/main.scss:web/static/stylesheets/main.css --style compressed"
   },
   "devDependencies": {
-    "@ministryofjustice/frontend": "^0.2.6",
+    "@ministryofjustice/frontend": "^1.8.0",
     "esbuild": "^0.17.19",
-    "govuk-frontend": "^3.14.0",
+    "govuk-frontend": "^4.6.0",
     "sass": "^1.63.2",
     "sass-loader": "^13.3.1"
   }
