--- a/service-admin/package.json
+++ b/service-admin/package.json
@@ -2,22 +2,16 @@
   "name": "opg-use-an-lpa-admin",
   "version": "0.1.0",
   "license": "OGL",
+  "type": "module",
   "scripts": {
-    "build": "webpack -p",
-    "watch": "webpack --mode development --watch"
+    "build": "npm run build-scss && node build.js",
+    "build-scss": "npm rebuild sass --verbose && sass --verbose --load-path . web/assets/main.scss:web/static/stylesheets/all.css --style compressed"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.10",
-    "@babel/preset-env": "^7.17.10",
-    "@ministryofjustice/frontend": "0.2.6",
-    "babel-loader": "^8.2.5",
-    "copy-webpack-plugin": "^6.1.1",
-    "css-loader": "^4.3.0",
-    "govuk-frontend": "^3.14.0",
-    "mini-css-extract-plugin": "^0.12.0",
-    "sass": "^1.51.0",
-    "sass-loader": "^10.2.1",
-    "webpack": "5.80.0",
-    "webpack-cli": "^3.3.12"
+    "@ministryofjustice/frontend": "^1.8.0",
+    "esbuild": "^0.17.19",
+    "govuk-frontend": "^4.6.0",
+    "sass": "^1.63.2",
+    "sass-loader": "^13.3.1"
   }
 }
