--- a/docker-compose.testing.yml
+++ b/docker-compose.testing.yml
@@ -25,6 +25,8 @@ services:
       BEHAT_ACTOR_URL: http://actor-web
       BEHAT_OLD_VIEWER_URL: http://viewer-web
       BEHAT_OLD_ACTOR_URL: http://actor-web
+      XDEBUG_CONFIG: client_host=host.docker.internal client_port=9000
+      XDEBUG_MODE: develop,debug,coverage
 
   lpa-codes-pact-mock:
     profiles:
