--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,7 +125,7 @@ services:
       ALLOW_OLDER_LPAS: "true"
       ALLOW_MERIS_LPAS: "false"
       DONT_SEND_LPAS_REGISTERED_AFTER_SEP_2019_TO_CLEANSING_TEAM: "false"
-      INSTRUCTIONS_AND_PREFERENCES: "false"
+      INSTRUCTIONS_AND_PREFERENCES: "true"
 
       # Local only
       API_SERVICE_URL: http://api-web
