UML-2918 inform users that LPAs registered before jan 2019 with i and p may have a severance (#2278)
* warning content added

* add Welsh translations

* added viewer-side content

* changed flag in terraform

* removed feature flag

* remove feature flag

* removed feature flag

* Capitalise words

* feature flag

* re-add welsh text after merging in main which had conflicts in
translation files

---------

Co-authored-by: Nick Davis <nicholas.davis@digital.justice.gov.uk>
Co-authored-by: Nick Davis <62664046+nickdavis2001@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,6 +65,9 @@ services:
       GOOGLE_ANALYTICS_ID: "UA-170469426-2"
       KMS_SESSION_CMK_ALIAS: "alias/viewer-sessions-cmk-alias"
 
+      # Feature flags
+      INSTRUCTIONS_AND_PREFERENCES: "true"
+
       # Local only
       API_SERVICE_URL: http://api-web
       PDF_SERVICE_URL: http://service-pdf
