seed with extra LPAs

--- a/mock-integrations/nginx.conf
+++ b/mock-integrations/nginx.conf
@@ -3,6 +3,9 @@
 # but use different response fields to derive the date
 map $request_uri $swagger_example {
     # 200 examples
+    # 200 examples
+    "~700000137237" "lpa7237";
+    "~700000136361" "lpa6361";
     "~700000151451" "lpa1451";
     "~700000000617" "lpa0617";
     "~700000000526" "lpa0526";
