--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,7 @@ services:
 
       # Feature flags
       INSTRUCTIONS_AND_PREFERENCES: "true"
+      ALLOW_GOV_ONE_LOGIN: "true"
 
       # Local only
       API_SERVICE_URL: http://api-web
@@ -127,6 +128,7 @@ services:
       ALLOW_MERIS_LPAS: "false"
       DONT_SEND_LPAS_REGISTERED_AFTER_SEP_2019_TO_CLEANSING_TEAM: "false"
       INSTRUCTIONS_AND_PREFERENCES: "true"
+      ALLOW_GOV_ONE_LOGIN: "false"
 
       # Local only
       API_SERVICE_URL: http://api-web
@@ -210,6 +212,7 @@ services:
       ALLOW_MERIS_LPAS: "false"
       DONT_SEND_LPAS_REGISTERED_AFTER_SEP_2019_TO_CLEANSING_TEAM: "false"
       INSTRUCTIONS_AND_PREFERENCES: "true"
+      ALLOW_GOV_ONE_LOGIN: "false"
 
       # Local only
       AWS_ACCESS_KEY_ID: "devkey"
