--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,7 +125,7 @@ services:
       # Feature flags
       DELETE_LPA_FEATURE: "true"
       ALLOW_MERIS_LPAS: "false"
-      DONT_SEND_LPAS_REGISTERED_AFTER_SEP_2019_TO_CLEANSING_TEAM: "false"
+      DONT_SEND_LPAS_REGISTERED_AFTER_SEP_2019_TO_CLEANSING_TEAM: "true"
       INSTRUCTIONS_AND_PREFERENCES: "true"
 
       # Local only
@@ -208,7 +208,7 @@ services:
 
       # Feature flags
       ALLOW_MERIS_LPAS: "false"
-      DONT_SEND_LPAS_REGISTERED_AFTER_SEP_2019_TO_CLEANSING_TEAM: "false"
+      DONT_SEND_LPAS_REGISTERED_AFTER_SEP_2019_TO_CLEANSING_TEAM: "true"
       INSTRUCTIONS_AND_PREFERENCES: "true"
 
       # Local only
