UML-2887 Service sending activation keys to unregistered LPAs (#2321)
* UML-2887 Confirm LPA status is valid before redirecting actor living outside UK

* UML-2887 fix broken unit test

* Add unit test coverage to AddAccessForAllLpaTest

* Merge bad exception thrown tests in AddAccessForAllLpaTest and update AccessForAllApiResultTest

* Delete unused featureEnabled and LoggerInterface

* Add behat test coverage

* switch on feature flag locally, update twig files and enter correct details in behat step

* Update old behat step to return expected bad request response

---------

Co-authored-by: Lbagg1 <lowenna.baggaley@digital.justice.gov.uk>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,7 +125,7 @@ services:
       # Feature flags
       DELETE_LPA_FEATURE: "true"
       ALLOW_MERIS_LPAS: "false"
-      DONT_SEND_LPAS_REGISTERED_AFTER_SEP_2019_TO_CLEANSING_TEAM: "false"
+      DONT_SEND_LPAS_REGISTERED_AFTER_SEP_2019_TO_CLEANSING_TEAM: "true"
       INSTRUCTIONS_AND_PREFERENCES: "true"
       ALLOW_GOV_ONE_LOGIN: "true"
 
@@ -209,7 +209,7 @@ services:
 
       # Feature flags
       ALLOW_MERIS_LPAS: "false"
-      DONT_SEND_LPAS_REGISTERED_AFTER_SEP_2019_TO_CLEANSING_TEAM: "false"
+      DONT_SEND_LPAS_REGISTERED_AFTER_SEP_2019_TO_CLEANSING_TEAM: "true"
       INSTRUCTIONS_AND_PREFERENCES: "true"
       ALLOW_GOV_ONE_LOGIN: "false"
 
