--- a/service-front/docker/app/Dockerfile
+++ b/service-front/docker/app/Dockerfile
@@ -8,7 +8,7 @@ COPY --from=mlocati/php-extension-installer /usr/bin/install-php-extensions /usr
 RUN set -xe \
   && apk add --update --no-cache icu gettext fcgi \
   && apk upgrade --update --no-cache curl libxml2 \
-  && install-php-extensions apcu redis intl gettext \
+  && install-php-extensions apcu redis-^5 intl gettext \
   && rm /usr/bin/install-php-extensions
 
 COPY service-front/docker/app/app-php.ini /usr/local/etc/php/conf.d/
