--- a/.github/workflows/statistics.yml
+++ b/.github/workflows/statistics.yml
@@ -19,6 +19,7 @@ jobs:
     name: "Post service stats to Slack"
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - name: Setup AWS credentials
         uses: aws-actions/configure-aws-credentials@v3.0.2
         with:
