--- a/.github/workflows/statistics.yml
+++ b/.github/workflows/statistics.yml
@@ -46,10 +46,8 @@ jobs:
         run: |
           python ./scripts/get_statistics/get_statistics.py --text > ./stats.txt
       - name: Post to slack
-        env:
-          SLACK_WEB_HOOK: ${{ secrets.webhook }}
         run: |
           python ./scripts/pipeline/service_stats_to_slack/stats_slack_notification.py \
-          --slack_webhook ${SLACK_WEB_HOOK} \
+          --slack_webhook ${{ secrets.webhook }} \
           --template_path ./scripts/pipeline/service_stats_to_slack/service_stats.txt \
           --stats_path ./stats.txt
