remove the block quote

--- a/.github/workflows/statistics.yml
+++ b/.github/workflows/statistics.yml
@@ -37,7 +37,7 @@ jobs:
           pip install -r ./scripts/pipeline/requirements.txt
       - name: Get stats
         run: |
-          python ./scripts/get_statistics/get_statistics.py --text > ./stats.txt
+          python ./scripts/get_statistics/get_statistics.py --text > ./stats.md
       - name: Post to slack
         env:
           SLACK_WEB_HOOK: ${{ secrets.PROD_SLACK_WEB_HOOK }}
@@ -45,4 +45,4 @@ jobs:
           python ./scripts/pipeline/service_stats_to_slack/stats_slack_notification.py \
           --slack_webhook ${{ env.SLACK_WEB_HOOK }} \
           --template_path ./scripts/pipeline/service_stats_to_slack/service_stats.txt \
-          --stats_path ./stats.txt
+          --stats_path ./stats.md
